更新了元件parts部分

--- a/Background.html
+++ b/Background.html
@@ -135,7 +135,7 @@
 				<div class="row">
 					<div class="col-lg-8 m-auto">
 						<div class="single-blog-banner-wrapper" style="padding: 100px 0 0;">
-							<h1>背景</h1>
+							<h1>项目背景</h1>
 							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
 							</p> -->
 							<div class="single-blog-social d-flex align-items-center justify-content-between">
