--- a/Team.html
+++ b/Team.html
@@ -141,13 +141,13 @@
 		<section class="author-banner-area">
 			<div class="container">
 				<div class="author-content text-center">
-					<h1>B409_G.O.A.T</h1>
+					<h1 style="text-align: center;">B409_G.O.A.T</h1>
 					<p>团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1</p>
 				</div>
 			</div>
 		</section>
 		<div class="author-content text-center">
-			<h2>— — — — — — — — — — PI — — — — — — — — — —</h2>
+			<h2 style="text-align: center;">— — — — — — — — — — PI — — — — — — — — — —</h2>
 			<br></br>
 		</div>
 		<div class="row">
@@ -226,7 +226,7 @@
 					<div class="col-md-10 m-auto">
 						<div class="author-content text-center">
 							<br></br>
-							<h2>— — — — — — — — — 学生队员 — — — — — — — — —</h2>
+							<h2 style="text-align: center;">— — — — — — — — — 学生队员 — — — — — — — — —</h2>
 							<br></br>
 						</div>
 						<div class="row">
@@ -385,6 +385,32 @@
 				</div>
 			</div>
 		</section>
+		<footer>
+			<section id="copyright" class="dark_section">
+				<div class="foot_container">
+					<div class="row2">
+						<div class="msg">
+							<div style="float: left;width: 50%;">
+								<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
+								<h3>联系</h3>
+								<p class="text-center">团队联系方式：1350068839@qq.com</p>
+								<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
+								<!-- <br> -->
+								<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
+							</div>
+							<div style="width: 50%;float: right;">
+								<h3>合作</h3>
+								<p >合作企业：北京擎科生物科技有限公司</p>
+								<p>合作内容：快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试</p>
+								<p>合作企业：武汉海吉力生物科技有限公司</p>
+								<p>合作内容：可用于分子诊断的DNA聚合酶的开发，海吉力协助进行临床样品检测</p>
+								
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</footer>
 		
 		<!-- Jquery -->
 		<script src="assets/js/default-js/jquery-3.3.1.min.js"></script>
