--- a/Collaboration.html
+++ b/Collaboration.html
@@ -4,18 +4,18 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>团队名称</title>
+		<title>团队合作</title>
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" href="assets/css/base-style.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 		<script src="assets/js/dark-light.js"></script>
 	</head>
 	<body class="placeholder">
-		<div class="loader-wrapper">
+		<!-- <div class="loader-wrapper">
 			<div class="count"></div>
 			<div class="loader"></div>
 			<div class="loader2"></div>
-		</div>
+		</div> -->
 		<!-- header area start from here-->
 		<header class="header-area ">
 			<div class="container">
@@ -141,8 +141,8 @@
 				<div class="row">
 					<div class="col-lg-8 m-auto">
 						<div class="single-blog-banner-wrapper">
-							<h1>标题标题标题标题标题标题标题标题标题</h1>
-							<p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
+							<h1>项目合作</h1>
+							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字 -->
 							</p>
 							<div class="single-blog-social d-flex align-items-center justify-content-between">
 								<div class="published-dtls-area d-flex align-items-center">
@@ -261,36 +261,31 @@
 		        </div>
 		    </div>
 		</section>
-		<footer class="footer-area">
-			<div class="footer-top-area">
-				<div class="container">
-					<div class="footer-top-wrapper d-flex justify-content-between">
-						<!-- menu-bar -->
-						<div align="center" class="contact-area">
-						    <h4>联系我们</h4>
-						    <div class="contact-address">
-						        <a href="#">邮箱：598666122@qq.com</a>
-								<a href="#">湖北大学：湖北省武汉市友谊大道368号</a>
-						    </div>
+		<footer>
+			<section id="copyright" class="dark_section">
+				<div class="foot_container">
+					<div class="row2">
+						<div class="msg">
+							<div style="float: left;width: 50%;">
+								<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
+								<h3>联系</h3>
+								<p class="text-center">团队联系方式：1350068839@qq.com</p>
+								<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
+								<!-- <br> -->
+								<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
+							</div>
+							<div style="width: 50%;float: right;">
+								<h3>合作</h3>
+								<p >合作企业：北京擎科生物科技有限公司</p>
+								<p>合作内容：快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试</p>
+								<p>合作企业：武汉海吉力生物科技有限公司</p>
+								<p>合作内容：可用于分子诊断的DNA聚合酶的开发，海吉力协助进行临床样品检测</p>
+								
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="footer-bottom">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6">
-							<p>Copyright © 2022 团队名称 All Rights Reserved.</p>
-						</div>
-						<div class="col-lg-6">
-							<ul class="footer-privacy-card">
-								<li><a href="#">服务条款</a></li>
-								<li><a href="#">隐私政策</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
+			</section>
 		</footer>
 		<!-- Jquery -->
 		<script src="assets/js/default-js/jquery-3.3.1.min.js"></script>
