--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 			</div>
 		</div>
 		<!--subcribe section start here-->
-		<section class="subscribe-area " style="padding-bottom: 0;">
+		<!-- <section class="subscribe-area " style="padding-bottom: 0;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 m-auto">
@@ -263,19 +263,29 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		
-		<!-- 页脚的联系方式 -->
 		<footer>
 			<section id="copyright" class="dark_section">
 				<div class="foot_container">
 					<div class="row2">
 						<div class="msg">
-							<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
-							<!-- <p class="text-center">团队联系方式：xxxxxxxxxxxxxxxxxxxxxxxxxxx</p> -->
-							<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
-							<!-- <br> -->
-							<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
+							<div style="float: left;width: 50%;">
+								<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
+								<h3>联系</h3>
+								<p class="text-center">团队联系方式：1350068839@qq.com</p>
+								<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
+								<!-- <br> -->
+								<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
+							</div>
+							<div style="width: 50%;float: right;">
+								<h3>合作</h3>
+								<p >合作企业：北京擎科生物科技有限公司</p>
+								<p>合作内容：快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试</p>
+								<p>合作企业：武汉海吉力生物科技有限公司</p>
+								<p>合作内容：可用于分子诊断的DNA聚合酶的开发，海吉力协助进行临床样品检测</p>
+								
+							</div>
 						</div>
 					</div>
 				</div>
