页头全部更换，细节更改

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<div class="search-box">
 						<img src="assets/img/svg/search.svg" alt="">
 						<input id="search" name="search" type="text" data-list=".data-list"
-							placeholder="Type your keywords...">
+							placeholder="输入搜索内容...">
 					</div>
 					<div class="data-list-wrapper">
 						<ul class="data-list">
@@ -83,7 +83,7 @@
 								<a href="Background.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目背景<span>2022.1.29</span></h4>
+											<h4>项目背景<span>2022.2.8</span></h4>
 										</div>
 										<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为61kDa的stofell片段，发现得到的StofellTaqDNA聚合酶的耐热性明显得到了...
 										</p>
@@ -95,7 +95,7 @@
 								<a href="Design.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目设计<span>2022.1.29</span></h4>
+											<h4>项目设计<span>2022.2.8</span></h4>
 										</div>
 										<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
 										</p>
@@ -107,9 +107,21 @@
 								<a href="Protocol.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目方案<span>2022.1.29</span></h4>
+											<h4>项目方案<span>2022.2.8</span></h4>
 										</div>
 										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
+										</p>
+									</div>
+									<img src="assets/img/svg/arrow-left.svg" alt="">
+								</a>
+							</li>
+							<li>
+								<a href="Result.html">
+									<div class="search-content">
+										<div class="search-title">
+											<h4>项目结果<span>2022.2.8</span></h4>
+										</div>
+										<p>分别将Taq和CL7-Taq的表达载体转化到大肠杆菌BL21感受态细胞中，用IPTG诱导蛋白质表达后，利用Ni柱亲和纯化的方法得到条带单一的蛋白，纯化结果如下图：...
 										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
@@ -139,7 +151,7 @@
 						<div class="banner-content-area">
 							<h5>Team</h5>
 							<h1><a href="Team.html">团队介绍</a></h1>
-							<h4 class="date"><span>2022.1.28</span> -B409_G.O.A.T</h4>
+							<h4 class="date"><span>2022.2.8</span> -B409_G.O.A.T</h4>
 							<!-- <p>文本24文本24</p> -->
 							<a href="Team.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
 						</div>
@@ -154,7 +166,7 @@
 						<div class="banner-content-area">
 							<h5>Collaboration</h5>
 							<h1><a href="Collaboration.html">团队合作</a></h1>
-							<h4 class="date"><span>2022.1.28</span> -B409_G.O.A.T</h4>
+							<h4 class="date"><span>2022.2.8</span> -B409_G.O.A.T</h4>
 							<!-- <p>文本34文本34</p> -->
 							<a href="Collaboration.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
 						</div>
@@ -169,7 +181,7 @@
 						<div class="banner-content-area">
 							<h5>Conclusion</h5>
 							<h1><a href="Conclusion.html">实验结论</a></h1>
-							<h4 class="date"><span>2022.1.28</span> -B409_G.O.A.T</h4>
+							<h4 class="date"><span>2022.2.8</span> -B409_G.O.A.T</h4>
 							<!-- <p>文本44文本44</p> -->
 							<a href="Conclusion.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
 						</div>
@@ -226,16 +238,16 @@
 				</div>
 				<div class="spc-single-card-wrapper">
 					<div class="spc-sc-img">
-						<a href="single-blog.html"><img src="assets/img/single-post/post4.jpg" alt=""></a>
+						<a href="Result.html"><img src="assets/img/single-post/post4.jpg" alt=""></a>
 					</div>
 					<div class="spc-sc-content-wrapper">
 						<div class="spc-scc-date">
 							<h4>04<span>FOUR</span></h4>
 						</div>
 						<div class="spc-scc-content">
-							<h5>团队简要介绍</h5>
-							<h3><a href="single-blog.html">团队简要介绍1</a></h3>
-							<p>团队简要介绍2团队简要介绍2</p>
+							<h5>Result</h5>
+							<h3><a href="Result.html">项目结果</a></h3>
+							<p>分别将Taq和CL7-Taq的表达载体转化到大肠杆菌BL21感受态细胞中，用IPTG诱导蛋白质表达后，利用Ni柱亲和纯化的方法得到条带单一的蛋白，纯化结果如下...</p>
 						</div>
 					</div>
 				</div>
