--- a/Design.html
+++ b/Design.html
@@ -44,10 +44,6 @@
 								<ul class="dropdown">
 									<li><a href="Parts.html">元件 Parts</a></li>
 									<li><a href="Collaboration.html">合作 Collaboration</a></li>
-									<li><a href="Demo.html">演示 Demo（可选）</a></li>
-									<li><a href="Hardware.html">硬件 Hardware（可选）</a></li>
-									<li><a href="Software.html">软件 Software（可选）</a></li>
-									<li><a href="Notebook.html">笔记 Notebook（可选）</a></li>
 								</ul>
 							</li>
 							<li><a href="Team.html">团队 Team</a></li>
@@ -59,7 +55,7 @@
 							<li class="popup"><img src="assets/img/svg/search.svg" alt=""></li>
 							<li class="dark-light"><img src="assets/img/svg/dark-light.svg" alt=""></li>
 							<li>
-								<!--移动菜单图标-->
+								
 								<div class="menu-toggole">
 									<span class="menu-show comon-tab">
 										<img src="assets/img/svg/toggle.svg" alt="">
@@ -79,56 +75,59 @@
 					<div class="search-box">
 						<img src="assets/img/svg/search.svg" alt="">
 						<input id="search" name="search" type="text" data-list=".data-list"
-							placeholder="Type your keywords...">
+							placeholder="输入搜索内容...">
 					</div>
 					<div class="data-list-wrapper">
 						<ul class="data-list">
 							<li>
-								<a href="">
+								<a href="Background.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本1<span>2022.1.29</span></h4>
+											<h4>项目背景<span>2022.2.8</span></h4>
 										</div>
-										<p>文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1文本1
+										<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为61kDa的stofell片段，发现得到的StofellTaqDNA聚合酶的耐热性明显得到了...
 										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
 							<li>
-								<a href="">
+								<a href="Design.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本2<span>2022.1.29</span></h4>
+											<h4>项目设计<span>2022.2.8</span></h4>
 										</div>
-										<p>文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2文本2 </p>
+										<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
+										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
 							<li>
-								<a href="">
+								<a href="Protocol.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本3<span>2022.1.29</span></h4>
+											<h4>项目方案<span>2022.2.8</span></h4>
 										</div>
-										<p>文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3文本3 </p>
+										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
+										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
 							<li>
-								<a href="">
+								<a href="Result.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>文本4<span>2022.1.29</span></h4>
+											<h4>项目结果<span>2022.2.8</span></h4>
 										</div>
-										<p>文本4文本4 </p>
+										<p>分别将Taq和CL7-Taq的表达载体转化到大肠杆菌BL21感受态细胞中，用IPTG诱导蛋白质表达后，利用Ni柱亲和纯化的方法得到条带单一的蛋白，纯化结果如下图：...
+										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
-
+		
 						</ul>
 					</div>
 				</div>
@@ -150,7 +149,7 @@
 								<div class="published-dtls-area d-flex align-items-center">
 									<div class="published-date d-flex align-items-center mr-25">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/calendar.svg" alt="">
-										<p>2022.1.28</p>
+										<p>2022.2.8</p>
 									</div>
 									<div class="published-person d-flex align-items-center">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/profile-user.svg"
@@ -215,10 +214,12 @@
 								<img src="assets/img/Bio_img/design4.png" style="width: 60%; margin-top: 30px;">
 
 								<h2>三、预期结果</h2>
-								<p>1.成功构建CL7-Taq表达质粒；</p>
-								<p>2.成功纯化出CL7-Taq蛋白，并得到CL7-Taq酶作用下最适PCR反应体系；</p>
-								<p>3.确立CL7-Taq酶的酶学性质优于Taq酶且具有普适性；</p>
-								<p>4.提供CL7-Taq酶的应用方案。</p>
+								<p>
+									1.成功构建CL7-Taq表达质粒；<br>
+									2.成功纯化出CL7-Taq蛋白，并得到CL7-Taq酶作用下最适PCR反应体系；<br>
+									3.确立CL7-Taq酶的酶学性质优于Taq酶且具有普适性；<br>
+									4.提供CL7-Taq酶的应用方案。
+								</p>
 							</div>
 						</div>
 					</div>
