--- a/Parts.html
+++ b/Parts.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>团队名称</title>
+		<title>元件 Parts</title>
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
 		<link rel="stylesheet" href="assets/css/base-style.css">
 		<link rel="stylesheet" href="assets/css/style.css">
@@ -55,7 +55,7 @@
 							<li class="popup"><img src="assets/img/svg/search.svg" alt=""></li>
 							<li class="dark-light"><img src="assets/img/svg/dark-light.svg" alt=""></li>
 							<li>
-
+								
 								<div class="menu-toggole">
 									<span class="menu-show comon-tab">
 										<img src="assets/img/svg/toggle.svg" alt="">
@@ -75,7 +75,7 @@
 					<div class="search-box">
 						<img src="assets/img/svg/search.svg" alt="">
 						<input id="search" name="search" type="text" data-list=".data-list"
-							placeholder="Type your keywords...">
+							placeholder="输入搜索内容...">
 					</div>
 					<div class="data-list-wrapper">
 						<ul class="data-list">
@@ -83,7 +83,7 @@
 								<a href="Background.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目背景<span>2022.1.29</span></h4>
+											<h4>项目背景<span>2022.2.8</span></h4>
 										</div>
 										<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为61kDa的stofell片段，发现得到的StofellTaqDNA聚合酶的耐热性明显得到了...
 										</p>
@@ -95,10 +95,9 @@
 								<a href="Design.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目设计<span>2022.1.29</span></h4>
+											<h4>项目设计<span>2022.2.8</span></h4>
 										</div>
-										<p>本研究将Taq
-											DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
+										<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
 										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
@@ -108,16 +107,27 @@
 								<a href="Protocol.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目方案<span>2022.1.29</span></h4>
+											<h4>项目方案<span>2022.2.8</span></h4>
 										</div>
-										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus
-											YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
+										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
 										</p>
 									</div>
 									<img src="assets/img/svg/arrow-left.svg" alt="">
 								</a>
 							</li>
-
+							<li>
+								<a href="Result.html">
+									<div class="search-content">
+										<div class="search-title">
+											<h4>项目结果<span>2022.2.8</span></h4>
+										</div>
+										<p>分别将Taq和CL7-Taq的表达载体转化到大肠杆菌BL21感受态细胞中，用IPTG诱导蛋白质表达后，利用Ni柱亲和纯化的方法得到条带单一的蛋白，纯化结果如下图：...
+										</p>
+									</div>
+									<img src="assets/img/svg/arrow-left.svg" alt="">
+								</a>
+							</li>
+		
 						</ul>
 					</div>
 				</div>
@@ -139,7 +149,7 @@
 								<div class="published-dtls-area d-flex align-items-center">
 									<div class="published-date d-flex align-items-center mr-25">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/calendar.svg" alt="">
-										<p>2022.1.28</p>
+										<p>2022.2.8</p>
 									</div>
 									<div class="published-person d-flex align-items-center">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/profile-user.svg"
