添加一位老师

--- a/Model.html
+++ b/Model.html
@@ -182,6 +182,7 @@
 								<h2>PCR扩增效率模型/PCR扩增动力学方程</h2>
 								<h4>一、问题提出</h4>
 								<p class="title-content">在实验室中，PCR反应的确立往往依靠于经验或多次试验摸索，另一方面，由于PCR反应过程较为复杂，影响因素较多，存在非技术操作，非反应系统导致实验失败的情况，有众多不确定性。基于此，我们提出PCR扩增动力学模型，以此来估算体系的反应速度，产物数量和模板用量等，指导反应的进行。</p>
+								<IMG SRC=$(URLFileName) HEIGHT=$(Height_PX) WIDTH=$(Width_PX)>
 								
 								<h4>二、理论依据</h4>
 								<p>DNA的半保留复制是PCR反应动力学的基本依据。PCR反应具有酶促反应动力学的一般特征，即由酶催化反应。[1]但又与其存在差异，表现为其产物可以作为下一轮反应的底物参与反应。</p>
