--- a/index.html
+++ b/index.html
@@ -154,14 +154,15 @@
 			
 		</div>
 
-		<div id="getthecoin">
-			<div class="container">
+		<!-- <div id="getthecoin">
+			<div class="chevon_container">
 				<div class="chevron"></div>
 				<div class="chevron"></div>
 				<div class="chevron"></div>
 				<span class="text">Scroll down</span>
 			</div>
-		</div>
+		</div> -->
+		
 		<div class="single-blog-full-content">
 			<div class="container">
 				<div class="index_content">
