--- a/Team.html
+++ b/Team.html
@@ -160,7 +160,7 @@
 						<h3>罗静雯</h3>
 						<p>博士，副教授，硕士生导师<br>电子邮箱：jwluo0227@163.com<br>研究方向：药剂学，靶向药物传递系统设计，缓控释给药系统研究</p>
 						<!-- 查看更多的按钮 -->
-						<a href="PI.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
+						<!-- <a href="PI.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a> -->
 					</div>
 				</div>
 			</div>
@@ -199,7 +199,7 @@
 						<p>博士，讲师<br>电子邮件：wangfei(AT)hubu.edu.cn<br />研究方向：合成生物学，绿色生物制造，基因工程，新型可编程核酸酶的挖掘与应用研究<br>社会兼职：湖北省生物工程学会会员
 						</p>
 						<!-- 查看更多的按钮 -->
-						<a href="teacher.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
+						<!-- <a href="teacher.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a> -->
 					</div>
 				</div>
 			</div>
@@ -213,7 +213,7 @@
 						<p>博士，讲师<br>电子邮件：wangfei(AT)hubu.edu.cn<br />研究方向：合成生物学，绿色生物制造，基因工程，新型可编程核酸酶的挖掘与应用研究<br>社会兼职：湖北省生物工程学会会员
 						</p>
 						<!-- 查看更多的按钮 -->
-						<a href="teacher.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a>
+						<!-- <a href="teacher.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a> -->
 					</div>
 				</div>
 			</div>
