--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>首页</title>
 		<link rel="icon" href="assets/img/favicon.ico" type="image/gif" sizes="16x16">
