团队添加cwp老师

--- a/Team.html
+++ b/Team.html
@@ -203,20 +203,24 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<br>
+		<div class="row">
 			<div class="col-md-8 m-auto">
 				<div class="profile-area">
 					<div class="profile-img">
-						<img src="assets/img/single-blog/profile-img.jpg" alt="">
+						<img src="assets/img/author/cwt.jpg" alt="">
 					</div>
 					<div class="blog-profile-content">
-						<h3>陈晚萍</h3>
-						<p>博士，讲师<br>电子邮件：wangfei(AT)hubu.edu.cn<br />研究方向：合成生物学，绿色生物制造，基因工程，新型可编程核酸酶的挖掘与应用研究<br>社会兼职：湖北省生物工程学会会员
+						<h3>陈晚苹</h3>
+						<p>实验师<br>邮箱wanpingchen@hubu.edu.cn<br>研究方向：基因工程、分子酶工程、合成生物学
 						</p>
 						<!-- 查看更多的按钮 -->
 						<!-- <a href="teacher.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a> -->
 					</div>
 				</div>
 			</div>
+			
 		</div>
 		<!-- <div class="author-content text-center">
 			<br></br>
