--- a/Protocol.html
+++ b/Protocol.html
@@ -179,7 +179,7 @@
 					<div class="row">
 						<div class="col-lg-8 m-auto" style="flex: 0 0 90%;max-width: 90%;">
 							<div class="post-full-content">
-								<h2>一.构建CL-7 Taq酶表达质粒和Taq酶表达质粒</h2>
+								<h2>一、构建CL-7 Taq酶表达质粒和Taq酶表达质粒</h2>
 								<p class="title-content">1.在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；</p>
 								<p class="title-content">2.设计用来扩增两段基因序列的引物。如表2.4示，引物在Taq基因两端的序列与载体的序列同源，在 Taq DNA 聚 合 酶 的C端加His标签（CATCACCATCACCATCAC）用于亲和纯化，并从合成质粒上将Taq(2493 bp)、CL7(390 bp)全长基因扩增出来，PCR体系如表2.5所示，PCR流程图如图2.2所示;</p>
 								<img src="assets/img/Bio_img/protocol1.png" >
@@ -297,13 +297,14 @@
 		        </div>
 		    </div>
 		</section> -->
-		<footer>
+		<footer >
 			<section id="copyright" class="dark_section">
 				<div class="foot_container">
 					<div class="row2">
-						<div class="msg">
+						<div class="msg" >
 							<div style="float: left;width: 50%;">
-								<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
+								<img id='img-logo' src="static/picture/company12.jpg"
+									style="width: 80px;padding: 0;margin-right: 10px;margin-top: 5px;">
 								<h3>联系</h3>
 								<p class="text-center">团队联系方式：1350068839@qq.com</p>
 								<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
@@ -311,11 +312,14 @@
 								<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
 							</div>
 							<div style="width: 50%;float: right;">
-								<h3>合作</h3>
-								<p >合作企业：北京擎科生物科技有限公司</p>
-								<p>合作内容：快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试</p>
-								<p>合作企业：武汉海吉力生物科技有限公司</p>
-								<p>合作内容：可用于分子诊断的DNA聚合酶的开发，海吉力协助进行临床样品检测</p>
+								<div style="float: left;">
+									<h3>合作</h3>
+									<p>合作企业：北京擎科生物科技有限公司</p>
+									<p>合作企业：武汉海吉力生物科技有限公司</p>
+								</div>
+								<div style="margin-left: 100px;">
+									<img src="static/picture/company.jpg" style="width: 100px;">
+								</div>
 								
 							</div>
 						</div>
