--- a/Team.html
+++ b/Team.html
@@ -142,7 +142,7 @@
 			<div class="container">
 				<div class="author-content text-center">
 					<h1 style="text-align: center;">B409_G.O.A.T</h1>
-					<p>团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1团队介绍1</p>
+					<p>B409_G.O.A.T团队由四位经验丰富的老师，一名研究生和八个积极好学的本科生组成。虽来自不同专业，但小伙伴们各司其职，各扬所长，在老师和师兄师姐的悉心指导下，共同合作完成项目。在这里，大家收获的不仅是基本重要的实验技能，耐心认真的科学素养，更结识了对科研充满好奇心，对学术保持敬畏心，对实验坚持严谨心的小伙伴们和前辈们，在一次次的沟通交流与协调中，懂得了合作与坚持的重要性。</p>
 				</div>
 			</div>
 		</section>
@@ -222,6 +222,24 @@
 			</div>
 			
 		</div>
+		<br>
+		<div class="row">
+			<div class="col-md-8 m-auto">
+				<div class="profile-area">
+					<div class="profile-img">
+						<img src="assets/img/author/cc.jpg" alt="">
+					</div>
+					<div class="blog-profile-content">
+						<h3>翟超</h3>
+						<p>博士，副教授，硕士生导师<br>办公电话：027-88666349<br>电子邮件：chaozhai(AT)hotmail.com<br />研究领域：生化和分子生物学
+						</p>
+						<!-- 查看更多的按钮 -->
+						<!-- <a href="teacher.html"><button class="btn btn-sm btn-radious-6 btn-black">查看更多</button></a> -->
+					</div>
+				</div>
+			</div>
+			
+		</div>
 		<!-- <div class="author-content text-center">
 			<br></br>
 			<h2 style="text-align: center;">— — — — — — — — — — 学生领队 — — — — — — — — — —</h2>
@@ -246,10 +264,27 @@
 					<div class="col-md-10 m-auto">
 						<div class="author-content text-center">
 							<br></br>
-							<h2 style="text-align: center;">— — — — — — — — — 学生队员 — — — — — — — — —</h2>
+							<h2 style="text-align: center;">— — — — — — — — — 学生领队 — — — — — — — — —</h2>
 							<br></br>
 						</div>
 						<div class="row">
+							<div class="col-lg-6 mb-30">
+								<div class="author-single-card">
+									<div class="author-single-card-img">
+										<img src="assets/img/author/zql.jpg" alt="">
+									</div>
+									<div class="author-single-card-content">
+										<h3><a href="#">朱沁灵</a></h3>
+										<p>本人是一个阳光，积极向上的女孩，在学习和研究的道路上，在思考中成长，在实验中进步，不管未来如何，将一直以严谨仔细的态度，大胆创新的假设为阿里阿德涅的线团，一步步走出神秘莫测的生物迷宫</p>
+										<div class="author-social">
+											<div class="author-location">
+												<img src="assets/img/svg/location.svg" alt="">
+												<a href="">生物科学类</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 							<div class="col-lg-6 mb-30">
 								<div class="author-single-card">
 									<div class="author-single-card-img">
@@ -326,6 +361,24 @@
 							<div class="col-lg-6 mb-30">
 								<div class="author-single-card">
 									<div class="author-single-card-img">
+										<img src="assets/img/author/zsh.jpg" alt="">
+									</div>
+									<div class="author-single-card-content">
+										<h3><a href="#">周思晗</a></h3>
+										<p>2020级生物学（研究生二年级）<br>202021107010937@stu.hubu.edu.cn<br />在团队中负责指导成员进行实验操作，在实验遇到问题时，提供建议与帮助</p>
+										<div class="author-social">
+											<div class="author-location">
+												<img src="assets/img/svg/location.svg" alt="">
+												<a href="">生物学</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							
+							<div class="col-lg-6 mb-30">
+								<div class="author-single-card">
+									<div class="author-single-card-img">
 										<img src="assets/img/author/fzy.jpg" alt="">
 									</div>
 									<div class="author-single-card-content">
@@ -372,6 +425,23 @@
 											<div class="author-location">
 												<img src="assets/img/svg/location.svg" alt="">
 												<a href="">数据科学与大数据技术</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-6 mb-30">
+								<div class="author-single-card">
+									<div class="author-single-card-img">
+										<img src="assets/img/author/xxc.jpg" alt="">
+									</div>
+									<div class="author-single-card-content">
+										<h3><a href="#">熊星辰</a></h3>
+										<p>湖北大学生命科学学院生物工程系2020级本科生熊星辰。创新谋突破，努力获成功。</p>
+										<div class="author-social">
+											<div class="author-location">
+												<img src="assets/img/svg/location.svg" alt="">
+												<a href="">生物工程</a>
 											</div>
 										</div>
 									</div>
@@ -431,25 +501,30 @@
 			</div>
 		</section>
 		<!-- 页脚的联系方式 -->
-		<footer style="margin-top: 120px;">
+		<footer >
 			<section id="copyright" class="dark_section">
 				<div class="foot_container">
 					<div class="row2">
-						<div class="msg">
+						<div class="msg" >
 							<div style="float: left;width: 50%;">
-								<img id='img-logo' src="static/picture/logo_b.jpg"
-									style="width: 100px;padding: 0;margin: 0;">
+								<img id='img-logo' src="static/picture/company12.jpg"
+									style="width: 80px;padding: 0;margin-right: 10px;margin-top: 5px;">
+								<h3>联系</h3>
 								<p class="text-center">团队联系方式：1350068839@qq.com</p>
 								<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
 								<!-- <br> -->
 								<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
 							</div>
 							<div style="width: 50%;float: right;">
-								<p>合作企业：北京擎科生物科技有限公司</p>
-								<p>合作内容：快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试</p>
-								<p>合作企业：武汉海吉力生物科技有限公司</p>
-								<p>合作内容：可用于分子诊断的DNA聚合酶的开发，海吉力协助进行临床样品检测</p>
-
+								<div style="float: left;">
+									<h3>合作</h3>
+									<p>合作企业：北京擎科生物科技有限公司</p>
+									<p>合作企业：武汉海吉力生物科技有限公司</p>
+								</div>
+								<div style="margin-left: 100px;">
+									<img src="static/picture/company.jpg" style="width: 100px;">
+								</div>
+								
 							</div>
 						</div>
 					</div>
