--- a/Model.html
+++ b/Model.html
@@ -323,13 +323,14 @@
 		        </div>
 		    </div>
 		</section> -->
-				<footer>
+				<footer >
 					<section id="copyright" class="dark_section">
 						<div class="foot_container">
 							<div class="row2">
-								<div class="msg">
+								<div class="msg" >
 									<div style="float: left;width: 50%;">
-										<img id='img-logo' src="static/picture/logo_b.jpg" style="width: 100px;padding: 0;margin: 0;">
+										<img id='img-logo' src="static/picture/company12.jpg"
+											style="width: 80px;padding: 0;margin-right: 10px;margin-top: 5px;">
 										<h3>联系</h3>
 										<p class="text-center">团队联系方式：1350068839@qq.com</p>
 										<p class="text-center">学校地址及信息：【湖北大学】湖北省武汉市友谊大道368号</p>
@@ -337,11 +338,14 @@
 										<p>Copyright © 2022 B409_G.O.A.T All Rights Reserved.</p>
 									</div>
 									<div style="width: 50%;float: right;">
-										<h3>合作</h3>
-										<p >合作企业：北京擎科生物科技有限公司</p>
-										<p>合作内容：快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试</p>
-										<p>合作企业：武汉海吉力生物科技有限公司</p>
-										<p>合作内容：可用于分子诊断的DNA聚合酶的开发，海吉力协助进行临床样品检测</p>
+										<div style="float: left;">
+											<h3>合作</h3>
+											<p>合作企业：北京擎科生物科技有限公司</p>
+											<p>合作企业：武汉海吉力生物科技有限公司</p>
+										</div>
+										<div style="margin-left: 100px;">
+											<img src="static/picture/company.jpg" style="width: 100px;">
+										</div>
 										
 									</div>
 								</div>
