团队页面页脚样式bug修复

--- a/Team.html
+++ b/Team.html
@@ -501,7 +501,7 @@
 			</div>
 		</section>
 		<!-- 页脚的联系方式 -->
-		<footer >
+		<footer style="margin-top: 120px;">
 			<section id="copyright" class="dark_section">
 				<div class="foot_container">
 					<div class="row2">
