修改部分样式

--- a/Collaboration.html
+++ b/Collaboration.html
@@ -185,9 +185,11 @@
 								<p style="text-align: center;">
 									<b>感谢</b><br>
 									北京擎科生物科技有限公司<br>
+									<b>合作内容</b><br>
+									快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试<br><br>
+									<b>感谢</b><br>
 									武汉海吉力生物科技有限公司<br>
 									<b>合作内容</b><br>
-									快速高保真DNA聚合酶的研究，擎科协助进行DNA聚合酶保真性的测试<br>
 									可用于分子诊断的DNA聚合酶的开发，海吉力协助进行临床样品检测<br>
 								</p>
 									
