--- a/Design.html
+++ b/Design.html
@@ -189,7 +189,10 @@
 									核酸酶介导的克隆方法，将Taq和CL7-Taq基因克隆到带有卡娜抗性基因的pET30a载体上。我们选择Lac启动子，该启动子可以被乳糖和IPTG诱导，从而特异性表达目的基因CL7-Taq聚合酶。
 								</p>
 								<img src="assets/img/Bio_img/design1.png" style="width: 50%;">
+								<div style="padding: 5px;">T5 核酸酶介导的表达质粒构建流程</div>
+								
 								<img src="assets/img/Bio_img/design2.png" style="width: 50%;">
+								<div style="padding: 5px;">Lac启动子及CL7-Taq核酸酶元件</div>
 								<h4>2.表达并纯化CL7-Taq酶</h4>
 								<p>a.将表达质粒转化至大肠杆菌感受态细胞中，用卡那霉素进行筛选，并用IPTG诱导酶的表达；
 							 	<br>b.破碎菌体细胞，利用镍柱可与His标签结合的特性纯化蛋白质，通过SDS-PAGE 电泳检测酶的纯度；
