--- a/Protocol.html
+++ b/Protocol.html
@@ -183,9 +183,10 @@
 								<p class="title-content">1.在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；</p>
 								<p class="title-content">2.设计用来扩增两段基因序列的引物。如表2.4示，引物在Taq基因两端的序列与载体的序列同源，在 Taq DNA 聚 合 酶 的C端加His标签（CATCACCATCACCATCAC）用于亲和纯化，并从合成质粒上将Taq(2493 bp)、CL7(390 bp)全长基因扩增出来，PCR体系如表2.5所示，PCR流程图如图2.2所示;</p>
 								<img src="assets/img/Bio_img/protocol1.png" >
+								
 								<span style="text-align: center;">
-									<img src="assets/img/Bio_img/protocol2.png" >
-									<img src="assets/img/Bio_img/protocol3.png" >
+									<img src="assets/img/Bio_img/protocol2.png" style="height: 18.75rem;">
+									<img src="assets/img/Bio_img/protocol3.png" style="height: 18.75rem;">
 								</span>
 								<p class="title-content">3.用SalI限制性内切酶处理pET30a载体，酶切体系如表 2.6 所示，分别回收酶切后的载体与 Taq 基因片段，利用 T5 核酸酶介导的克隆方法来构建pET-30a-Taq表达质粒和pET-30a-CL7-Taq 表达质粒。</p>
 								<img src="assets/img/Bio_img/protocol4.png" style="width: 50%;">
