--- a/Result.html
+++ b/Result.html
@@ -202,10 +202,10 @@
 								<h2>三、PCR反应条件的优化</h2>
 								<p class="title-content">为了探究CL7-Taq对PCR反应条件进行优化，我们分析了不同离子浓度对PCR的影响。分 别在0-9 mM的MgCl2, 10-100 mM的KCl, 10-80 mM的(NH4)2SO4 以及pH值7.0-9.0 的反应缓冲液中，测定了两种聚合酶的活性。用EvaEZ荧光聚合酶活性测定试剂 盒绘制TaqDNA聚合酶的酶活标准曲线，在荧光定量PCR仪上，60°C恒温单链延伸反应来检测Taq DNA聚合酶和CL7-Taq DNA聚合酶的荧光信号，利用荧光信号的变化率带入公式计算相对酶活。在不同浓度的Mg2+, K+, (NH4)2SO4盐离子和pH值的PCR反应缓冲液中，分别测定Taq和CL7-Taq DNA聚合酶的活性，结果如图：</p>
 								<span>
-									<img src="assets/img/Bio_img/result3.png" >
-									<img src="assets/img/Bio_img/result4.png" ><br>
-									<img src="assets/img/Bio_img/result5.png" >
-									<img src="assets/img/Bio_img/result6.png" >
+									<img src="assets/img/Bio_img/result3.png" style="height: 250px;width: 400px;">
+									<img src="assets/img/Bio_img/result4.png" style="height: 250px;width: 400px;"><br>
+									<img src="assets/img/Bio_img/result5.png" style="height: 250px;width: 400px;">
+									<img src="assets/img/Bio_img/result6.png" style="height: 250px;width: 400px;">
 									<div style="text-align: center;font-size: 25px;">图2</div>
 								</span>
 								
