修改部分样式

--- a/Design.html
+++ b/Design.html
@@ -83,7 +83,7 @@
 								<a href="Background.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目背景<span>2022.2.8</span></h4>
+											<h4>项目背景</h4>
 										</div>
 										<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为61kDa的stofell片段，发现得到的StofellTaqDNA聚合酶的耐热性明显得到了...
 										</p>
@@ -95,7 +95,7 @@
 								<a href="Design.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目设计<span>2022.2.8</span></h4>
+											<h4>项目设计</h4>
 										</div>
 										<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
 										</p>
@@ -107,7 +107,7 @@
 								<a href="Protocol.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目方案<span>2022.2.8</span></h4>
+											<h4>项目方案</h4>
 										</div>
 										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
 										</p>
@@ -119,7 +119,7 @@
 								<a href="Result.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目结果<span>2022.2.8</span></h4>
+											<h4>项目结果</h4>
 										</div>
 										<p>分别将Taq和CL7-Taq的表达载体转化到大肠杆菌BL21感受态细胞中，用IPTG诱导蛋白质表达后，利用Ni柱亲和纯化的方法得到条带单一的蛋白，纯化结果如下图：...
 										</p>
@@ -141,16 +141,16 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 m-auto">
-						<div class="single-blog-banner-wrapper" style="padding: 100px 0 0;">
+						<div class="single-blog-banner-wrapper" style="padding: 100px 0 0 0;">
 							<h1>实验设计</h1>
 							<!-- <p>文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字 -->
-							</p>
+							<!-- </p> -->
 							<div class="single-blog-social d-flex align-items-center justify-content-between">
 								<div class="published-dtls-area d-flex align-items-center">
-									<div class="published-date d-flex align-items-center mr-25">
+									<!-- <div class="published-date d-flex align-items-center mr-25">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/calendar.svg" alt="">
 										<p>2022.2.8</p>
-									</div>
+									</div> -->
 									<div class="published-person d-flex align-items-center">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/profile-user.svg"
 											alt="">
@@ -200,6 +200,8 @@
 									<br>d.通过检测酶扩增速率来测定酶的活性。
 								</p>
 								<img src="assets/img/Bio_img/design3.png" style="width: 50%;">
+								<div style="padding: 5px;">His标签蛋白纯化流程</div>
+								
 								<h4>3.确立CL7-Taq酶PCR反应体系</h4>
 								<p>a.设计0-9mM的MgCl2，10-100mMKCl，10-80mM的(NH4)2SO4及pH值7.0-9.0的反应缓冲液，测定Taq酶与Cl7-Taq酶的酶活；
 									<br>b.用EvaEZ荧光聚合酶活性测定试剂盒绘制Taq酶的酶活标准曲线；
