--- a/Parts.html
+++ b/Parts.html
@@ -83,7 +83,7 @@
 								<a href="Background.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目背景<span>2022.2.8</span></h4>
+											<h4>项目背景</h4>
 										</div>
 										<p>在1993年，Frances等人研究发现，将TaqDNA聚合酶的5'→3'核酸外切酶活性的结构域切除，得到了蛋白大小为61kDa的stofell片段，发现得到的StofellTaqDNA聚合酶的耐热性明显得到了...
 										</p>
@@ -95,7 +95,7 @@
 								<a href="Design.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目设计<span>2022.2.8</span></h4>
+											<h4>项目设计</h4>
 										</div>
 										<p>本研究将Taq DNA聚合酶与双链DNA结合蛋白CL7融合，纯化CL7-Taq酶，以期增强酶与模板结合的能力，优化其酶学性质。并设计CL7-Taq酶作用下的最优PCR反应体系，扩大其应用范围...
 										</p>
@@ -107,7 +107,7 @@
 								<a href="Protocol.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目方案<span>2022.2.8</span></h4>
+											<h4>项目方案</h4>
 										</div>
 										<p>在金开瑞生物公司合成编码来源于Thermus aquaticus YT-1的Taq酶基因序列（GenBank:P19821.1）和来源于大肠杆菌CE7突变体CL7的基因序列(GenBank:CP018986.1)；...
 										</p>
@@ -119,7 +119,7 @@
 								<a href="Result.html">
 									<div class="search-content">
 										<div class="search-title">
-											<h4>项目结果<span>2022.2.8</span></h4>
+											<h4>项目结果</h4>
 										</div>
 										<p>分别将Taq和CL7-Taq的表达载体转化到大肠杆菌BL21感受态细胞中，用IPTG诱导蛋白质表达后，利用Ni柱亲和纯化的方法得到条带单一的蛋白，纯化结果如下图：...
 										</p>
@@ -147,10 +147,10 @@
 							</p>
 							<div class="single-blog-social d-flex align-items-center justify-content-between">
 								<div class="published-dtls-area d-flex align-items-center">
-									<div class="published-date d-flex align-items-center mr-25">
+									<!-- <div class="published-date d-flex align-items-center mr-25">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/calendar.svg" alt="">
 										<p>2022.2.8</p>
-									</div>
+									</div> -->
 									<div class="published-person d-flex align-items-center">
 										<img class="icon-svg svg-orange mr-5" src="assets/img/svg/profile-user.svg"
 											alt="">
