--- a/Model.html
+++ b/Model.html
@@ -37,8 +37,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
-						<img id='img-logo' src="static/picture/title-logo.png" style="width: 60px;padding-right: 10px;">
-						<a href="index.html">合成生物学竞赛</a>
+						<a href="https://www.synbiohive.com/"><img id='img-logo' src="static/picture/title_logo.png" style="width: 60%;"></a>
 					</div>
 					<!-- menu-bar -->
 					<div class="menu-bar">
@@ -253,13 +252,13 @@
 								</span>
 								<p style="margin-top: 10px;">至此，方程中包括了以下的变量（或因素）：</p>
 								<table style="border-top: 1px solid; border-bottom: 1px solid;color: #000000;">
-									<tr><th>Ntarg</th><th>初始模板数量</th><th>Ptime</th><th>预变性时间</th></tr>
+									<tr><td>Ntarg</td><td>初始模板数量</td><td>Ptime</td><td>预变性时间</td></tr>
 									<tr><td>P</td><td>平均扩增效率</td><td>n</td><td>循环次数</td></tr>
 									<tr><td>N1</td><td>方式转换参数</td><td>Cenz</td><td>酶分子常数（3．2×1010）</td></tr>
 									<tr><td>M</td><td>扩增片段分子质量</td><td>Time</td><td>变性时间</td></tr>
 									<tr><td>U</td><td>投入系统的酶单位</td><td>L</td><td>扩增片段长度</td></tr>
 									<tr><td>Temp</td><td>变性温度</td><td>Cu</td><td>转换系数（1．66×10 －18）</td></tr>
-									<tr><td>Ceactiv</td><td colspan="3">酶活性系数1－0．5× （n× Time＋ Ptime）／e（a＋ b× Temp）</td></tr>
+									<tr><td>Ceactiv</td><td colspan="2">酶活性系数1－0．5× （n× Time＋ Ptime）／e（a＋ b× Temp）</td></tr>
 								</table>
 								
 								<div style="text-align: center;">（n2是极限循环次数，可由$ 1－0.5×(n×Time＋Ptime)/e^{(a＋b×Temp)}＝0 $计算）。</div>
