--- a/Collaboration.html
+++ b/Collaboration.html
@@ -24,8 +24,7 @@
 				<div class="header-wrapper d-flex align-items-center justify-content-between">
 					<!--header-logo-->
 					<div class="header-logo">
-						<img id='img-logo' src="static/picture/title-logo.png" style="width: 60px;padding-right: 10px;">
-						<a href="index.html">合成生物学竞赛</a>
+						<a href="https://www.synbiohive.com/"><img id='img-logo' src="static/picture/title_logo.png" style="width: 60%;"></a>
 					</div>
 					<!-- menu-bar -->
 					<div class="menu-bar">
